syntax = "proto3";

package greeting;

option java_package ="com.cristiancourse.proto.greeting";
option java_multiple_files = true;

message GreetingRequest {
  string first_name = 1;
}

message GreetingResponse {
  string result = 1;
}

message SumReq {
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumRes {
  int32 result = 1;
}

service SumService {
  rpc sum(SumReq) returns (SumRes);
}

service GreetingService {
  rpc greet(GreetingRequest) returns (GreetingResponse);
  rpc greetManyTimes(GreetingRequest) returns (stream GreetingResponse);
  rpc longGreet(stream GreetingRequest) returns (GreetingResponse);
  rpc greetEveryone(stream GreetingRequest) returns (stream GreetingResponse);
}
