syntax = "proto3";

package sqrt;

option java_package ="com.cristiancourse.proto.sqrt";
option java_multiple_files = true;

message SqrtReq {
  int32 num = 1;
}

message SqrtRes {
  double result = 1;
}

service SqrtService {
  rpc sqrt(SqrtReq) returns (SqrtRes);
}
